--- a/assets/scss/layout/woocommerce/_product-texture.scss
+++ b/assets/scss/layout/woocommerce/_product-texture.scss
@@ -1,6 +1,6 @@
 .cam-product-texture {
     clear: both;
-    &__title{
+    &__title {
         color: $gris-superclaro;
     }
     &__img {
@@ -9,6 +9,9 @@
     &__link {
         padding: 10px 3px 0 3px;
         position: relative;
+        display: inline-block;
+        width: 50px;
+        height: 50px;
         &:hover .cam-product-texture__img {
             transform: scale(1.1) rotate(-180deg);
         }
