--- a/assets/scss/layout/woocommerce/_woo-global.scss
+++ b/assets/scss/layout/woocommerce/_woo-global.scss
@@ -203,3 +203,18 @@ a.button {
 .checkbox{
   margin: 0;
 }
+.woocommerce .create-account {
+    clear: both;
+}
+
+.woocommerce-shipping-fields{
+  label.checkbox{
+    float: right;
+  }
+  input.input-checkbox{
+    float: left;
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+  }
+}
