--- a/assets/scss/layout/woocommerce/_woo-single-product.scss
+++ b/assets/scss/layout/woocommerce/_woo-single-product.scss
@@ -1,4 +1,5 @@
 //Pagina single de productos
+.upsells.products{display: none;}
 .single.single-product {
   //Conetenedor de woocommerce
   .woocommerce-content-cam {
