--- a/assets/scss/pages/_404.scss
+++ b/assets/scss/pages/_404.scss
@@ -21,6 +21,11 @@
     }
     &-text {
         margin-bottom: 20px;
+        &__title{
+            display: block;
+            font-size: 2.5em;
+            font-weight: $font-bold;
+        }
     }
     &-img {
         @include MQ(SM) {
