--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -87,9 +87,9 @@
 
 .nav.navbar-nav {
   width: 100%;
-  .menu__item {
+/*   .menu__item {
     min-width: 14%;
-  }
+  } */
 }
 
 .contacto-visible {
